test/netlist/error/only-param.bop
A[N](a:[N]) = b:[N]
where
  for i = 0 to N - 1
    b[i] = id(a[i]);
  end for;
end where;
